[gd_scene load_steps=4 format=3 uid="uid://bo2u7hpywl28r"]

[ext_resource type="Texture2D" uid="uid://cu4ckfs7u46lk" path="res://Assets/Sprites/icons/health.png" id="1_oi13q"]
[ext_resource type="Script" path="res://Scripts/UI/in_game_ui.gd" id="1_rplvb"]
[ext_resource type="Texture2D" uid="uid://cq4yjb34otfql" path="res://Assets/Sprites/icons/health_bar.png" id="2_m3fa5"]

[node name="InGameUi" type="Control" node_paths=PackedStringArray("health_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rplvb")
health_container = NodePath("base_panel/health_container/health")

[node name="base_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="health_container" type="HBoxContainer" parent="base_panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 164.0
grow_vertical = 2

[node name="icon" type="TextureRect" parent="base_panel/health_container"]
layout_mode = 2
texture = ExtResource("1_oi13q")
expand_mode = 3

[node name="health" type="TextureProgressBar" parent="base_panel/health_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
allow_greater = true
stretch_margin_left = 100
texture_progress = ExtResource("2_m3fa5")

[node name="end_panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="end_condition" type="Label" parent="end_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="end_panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="rematch_button" type="Button" parent="end_panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Rematch"

[node name="quit_button" type="Button" parent="end_panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Quit to menu"
